src/objects/ADvendio__AccountPayableCondition__c.object
<CustomObject>
    <description>Conditions for Account Payables to set up sharing fees</description>
    <fields>
        <fullName>ADvendio__AccountPayable__c</fullName>
        <description>The Account Payable, this Condition is connected to.</description>
        <inlineHelpText>The Account Payable, this Condition is connected to.</inlineHelpText>
        <label>Account Payable</label>
        <referenceTo>ADvendio__AccountPayable__c</referenceTo>
        <relationshipLabel>Account Payable Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Share__c</fullName>
        <description>Account Payables share</description>
        <inlineHelpText>Account Payables share in %</inlineHelpText>
        <label>Share (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <description>Type specifing the value range</description>
        <inlineHelpText>Type specifing the value range</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eCPM</fullName>
                </value>
                <value>
                    <fullName>fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ValidFrom__c</fullName>
        <description>The date this condition will be active from.</description>
        <inlineHelpText>The date this condition will be active from.</inlineHelpText>
        <label>valid (From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidTo__c</fullName>
        <description>The date this condition will be active to.</description>
        <inlineHelpText>The date this condition will be active to.</inlineHelpText>
        <label>valid (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValueFrom__c</fullName>
        <description>Lower value of the range to identify a share.</description>
        <inlineHelpText>Lower value of the range to identify a share.</inlineHelpText>
        <label>Value (From)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValueTo__c</fullName>
        <description>Upper value of the range to identify a share.</description>
        <inlineHelpText>Upper value of the range to identify a share.</inlineHelpText>
        <label>Value (To)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Account Payable Condition</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__AccountPayable__c</columns>
        <columns>ADvendio__ValidFrom__c</columns>
        <columns>ADvendio__ValidTo__c</columns>
        <columns>ADvendio__Type__c</columns>
        <columns>ADvendio__Share__c</columns>
        <columns>ADvendio__ValueFrom__c</columns>
        <columns>ADvendio__ValueTo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CAC-{0000}</displayFormat>
        <label>Condition</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Payable Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>